@@ -11,6 +11,7 @@
   * Added test suites for CASA measurement set support when the 'casacore' module is found
   * Added support for astorpy.units.quantity.Quantity instances to lsl.misc.rfutil
   * Removed lsl.misc.mathutil.savitzky_golay since it was added in scipy v0.14.0+
+  * Added support for collecting usage data for LSL via lsl.misc.telemetry
   
 1.2.5
   * Updated setup.py to make it more likely that clang will build OpenMP-enabled extensions
